// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utbetalinger with kontonummer renders correctly 1`] = `
<DocumentFragment>
  <div
    class="box__wrapper"
    id="utbetaling"
  >
    <div
      class="navds-guide-panel navds-guide-panel--poster"
    >
      <div
        class="navds-guide"
      >
        <div
          class="navds-guide__illustration navds-guide__illustration--medium"
        >
          <img
            alt=""
            class="box__ikon"
            src="Kontonummer.svg"
          />
        </div>
      </div>
      <div
        class="navds-guide-panel__content"
      >
        <div
          class="box__container"
        >
          <div
            class="box__header"
          >
            <div
              class="box__title-container"
            >
              <div
                class="box__line"
              />
              <h2
                class="box__title navds-heading navds-heading--medium"
              >
                Kontonummer for utbetaling
              </h2>
              <div
                class="box__line"
              />
            </div>
            <a
              aria-label="Direktelenke til denne seksjonen"
              class="navds-link anchor-link"
              href="#utbetaling"
            >
              <img
                alt=""
                src="AnchorLink.svg"
              />
              Lenke hit
            </a>
          </div>
          <div
            class="box__content"
          >
            <dl
              class="list"
            >
              <div
                class="list-item"
              >
                <div
                  class="listelement__header"
                >
                  <dt>
                    <p
                      class="navds-label"
                    >
                      Kontonummer
                    </p>
                  </dt>
                </div>
                <div
                  class="content "
                >
                  <dd>
                    1234 56 78911
                  </dd>
                </div>
                <p
                  class="navds-body-short"
                />
              </div>
            </dl>
            <div
              class="kilde__container"
            >
              <button
                class="kilde__knapp knapp-med-ikon navds-button navds-button--tertiary navds-button--medium"
              >
                <span
                  aria-live="polite"
                  class="navds-label"
                >
                  <span
                    class="kilde__icon"
                  >
                    <img
                      alt=""
                      src="Pencil.svg"
                    />
                  </span>
                  <p
                    class="navds-body-long"
                  >
                    Endre
                  </p>
                </span>
              </button>
              <div
                class="kilde__tekst"
              >
                <p
                  class="navds-detail"
                >
                  Kilde: NAV
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Utbetalinger with utenlandsk bank renders correctly 1`] = `
<DocumentFragment>
  <div
    class="box__wrapper"
    id="utbetaling"
  >
    <div
      class="navds-guide-panel navds-guide-panel--poster"
    >
      <div
        class="navds-guide"
      >
        <div
          class="navds-guide__illustration navds-guide__illustration--medium"
        >
          <img
            alt=""
            class="box__ikon"
            src="Kontonummer.svg"
          />
        </div>
      </div>
      <div
        class="navds-guide-panel__content"
      >
        <div
          class="box__container"
        >
          <div
            class="box__header"
          >
            <div
              class="box__title-container"
            >
              <div
                class="box__line"
              />
              <h2
                class="box__title navds-heading navds-heading--medium"
              >
                Kontonummer for utbetaling
              </h2>
              <div
                class="box__line"
              />
            </div>
            <a
              aria-label="Direktelenke til denne seksjonen"
              class="navds-link anchor-link"
              href="#utbetaling"
            >
              <img
                alt=""
                src="AnchorLink.svg"
              />
              Lenke hit
            </a>
          </div>
          <div
            class="box__content"
          >
            <dl
              class="list"
            >
              <div
                class="list-item"
              >
                <div
                  class="listelement__header"
                >
                  <dt>
                    <p
                      class="navds-label"
                    >
                      Bank
                    </p>
                  </dt>
                </div>
                <div
                  class="content "
                >
                  <dd>
                    <p
                      class="navds-body-short"
                    >
                      Dominion Bank
                    </p>
                    <p
                      class="navds-body-short"
                    >
                      Forente Arabiske Emirater
                    </p>
                  </dd>
                </div>
                <p
                  class="navds-body-short"
                />
              </div>
              <div
                class="list-item"
              >
                <div
                  class="listelement__header"
                >
                  <dt>
                    <p
                      class="navds-label"
                    >
                      Kontonummer / IBAN
                    </p>
                  </dt>
                </div>
                <div
                  class="content "
                >
                  <dd>
                    AE460090000000123456789
                  </dd>
                </div>
                <p
                  class="navds-body-short"
                />
              </div>
              <div
                class="list-item"
              >
                <div
                  class="listelement__header"
                >
                  <dt>
                    <p
                      class="navds-label"
                    >
                      Valuta
                    </p>
                  </dt>
                </div>
                <div
                  class="content "
                >
                  <dd>
                    Amerikansk dollar
                  </dd>
                </div>
                <p
                  class="navds-body-short"
                />
              </div>
              <div
                class="list-item"
              >
                <div
                  class="listelement__header"
                >
                  <dt>
                    <p
                      class="navds-label"
                    >
                      BIC / SWIFT-kode
                    </p>
                  </dt>
                </div>
                <div
                  class="content "
                >
                  <dd>
                    EBILAEADXXX
                  </dd>
                </div>
                <p
                  class="navds-body-short"
                />
              </div>
            </dl>
            <div
              class="kilde__container"
            >
              <button
                class="kilde__knapp knapp-med-ikon navds-button navds-button--tertiary navds-button--medium"
              >
                <span
                  aria-live="polite"
                  class="navds-label"
                >
                  <span
                    class="kilde__icon"
                  >
                    <img
                      alt=""
                      src="Pencil.svg"
                    />
                  </span>
                  <p
                    class="navds-body-long"
                  >
                    Endre
                  </p>
                </span>
              </button>
              <div
                class="kilde__tekst"
              >
                <p
                  class="navds-detail"
                >
                  Kilde: NAV
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
